# RtmpPublisher

./: build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/takusemba/rtmppublishersample/: BaseActivity.java  CallerPersonalActivity.java  PlayerActivity.kt  PublishPullActivity.kt  Voip.java  VoipObject.java
app/src/main/res/layout/: activity_caller_personal.xml  activity_main.xml  activity_player.xml  activity_publish_pull.xml
app/src/main/res/values/: colors.xml  strings.xml
ogg-vorbis/src/main/cpp/libvorbis-stream/: vorbis-fileinputstream.c  vorbis-fileoutputstream.c
rtmp-client/: CMakeLists.txt  build.gradle
rtmp-client/src/main/cpp/: AudioSettingParameter.h  com_today_im_IMMuxer.c  com_today_im_IMMuxer.h
rtmp-client/src/main/cpp/flvmuxer/: today_rtmp.c  today_rtmp.h
rtmp-client/src/main/java/com/today/im/: IMMuxer.java  MD5.java  PacketInfo.java
rtmppublisher/: CMakeLists.txt  build.gradle
rtmppublisher/src/main/cpp/: opus-lib.cpp
rtmppublisher/src/main/java/com/takusemba/rtmppublisher/: AudioEncoder.java  AudioHandler.java  AudioPlayerHandler.java  AudioRecorder.java  Muxer.java  PublisherTask.java  Puller.java  PullerTask.java  RtmpPuller.java  Streamer.java  StreamerPuller.java
rtmppublisher/src/main/java/com/today/im/opus/: IMUtils.java  OpusUtils.java  OpusUtils.kt  PublisherListener.java  PublisherTask.java  PullerListener.java  PullerTask.java  Uilts.kt
